--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 <!-- =============== TODO javascript =============== -->
 		<script>
 			/*! Opcional | TODO Plain JS !*/
-		  	document.write( '\u003Cscript type="text/javascript" src="script/' + ( dialogo.indexOf('es5') != -1 ? 'vanilla' : 'legacy' ) + '.js">\u003C/script>' );
+		  	document.write( '\u003Cscript type="text/javascript" src="script/' + ( dialogo.indexOf('es5') != -1 ? 'vanilla' : 'no-legacy' ) + '.js">\u003C/script>' );
 		</script>
 <!-- =============== FIN javascript =============== -->
 
