--- a/html5.html
+++ b/html5.html
@@ -14,7 +14,7 @@
 
 		<script>
 			var //Nos servirá para iniciar diálogo por cada instrucción de ser necesario
-				dialog = [];
+				dialogo = [];
 			/*! Agregamos la clase de estilo js al elemento HTML !*/
 	        document.documentElement.className = 'js';
 	    </script>
@@ -138,7 +138,7 @@
 				}());
 				
 				/*! Para una condición más agresiva, cambiar caniuse.HTML5 por caniuse.HTML5full  !*/
-				document.write( '\u003Cscript src=script/' + ( HTML5test && caniuse.ECMA262 >= 5 && caniuse.HTML5 &&  caniuse.CSS3Selector && caniuse.modernAPI ? (dialog.push('html5'), 'vanilla') : ( document.getElementById('browsehappy').style.cssText = 'display: block;' ,'legacy') ) + '.js>\u003C/script>' );
+				document.write( '\u003Cscript src=script/' + ( HTML5test && caniuse.ECMA262 >= 5 && caniuse.HTML5 &&  caniuse.CSS3Selector && caniuse.modernAPI ? (dialogo.push('html5'), 'vanilla') : ( document.getElementById('browsehappy').style.cssText = 'display: block;' ,'no-legacys') ) + '.js>\u003C/script>' );
 
 			})( typeof window !== 'undefined' ? window : typeof global !== 'undefined' ? global : typeof self !== 'undefined' ? self : this, document );
 		//-->
