--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
-<!DOCTYPE html>
+<!doctype html>
 <html class="no-js" lang="es-PE">
 	<head>
-		<meta charset="UTF-8">
+		<meta charset="utf-8">
 		<title>SisePuede: Vanilla JS, para navagadores antiguos y modernos</title>
 		<meta http-equiv="x-ua-compatible" content="ie=edge">
     	<meta name="description" content="SisePuede: Solución para navegadores antiguos y modernos">
@@ -88,7 +88,7 @@
 <!-- =============== TODO javascript =============== -->
 		<script>
 			/*! Opcional | TODO Plain JS !*/
-		  	document.write( '\u003Cscript type="text/javascript" src="script/' + ( dialogo.indexOf('es5') != -1 ? 'vanilla' : 'no-legacy' ) + '.js">\u003C/script>' );
+		  	document.write( '\u003Cscript type="text/javascript" src="script/' + ( dialogo.indexOf('es5') != -1 ? 'vanilla' : 'no-legacys' ) + '.js">\u003C/script>' );
 		</script>
 <!-- =============== FIN javascript =============== -->
 
