Incluimos el servicio de cdn.Polyfill.io
Muy bueno, si lo usamos detectando al menos el uso de ‘use strict’;
característica mínima de ECMAScript5.

--- a/5.html
+++ b/5.html
@@ -19,6 +19,9 @@
 	        document.documentElement.className = 'js';
 	    </script>
 
+	    <!-- // Usamos los servicios de Polyfill para ES5 -->
+	    <script src="https://cdn.polyfill.io/v2/polyfill.js?features=es5"></script>
+
 		<!-- // Cuando el navegador tiene desactivado el motor de Javascript -->
 		<noscript><link rel="stylesheet" href="css/no-js.css"></noscript>
 	</head>
